# code-gen

./: Cargo.toml  README.md
src/: code_buffer.rs  code_buffer_tests.rs  expression.rs  expression_statement_tests.rs  lib.rs  literal.rs  literal_tests.rs  statement.rs
src/common/: code_buffer.rs  is_empty.rs  mod.rs  source.rs
src/core/: code_buffer.rs  is_empty.rs  mod.rs
src/expression/: expression.rs  literal.rs  mod.rs  with_expression.rs  with_params.rs
src/go/var/: go_primitive.rs  go_type.rs  mod.rs
src/rust/: mod.rs
src/rust/branch/: match_case.rs  match_statement.rs  mod.rs
src/rust/common/: access.rs  comment_type.rs  impl_block.rs  mod.rs  type_dec.rs  with_access.rs  with_comments.rs  with_generics.rs  with_type_decs.rs  with_unsafe_flag.rs
src/rust/control/: if_statement.rs  match_case.rs  match_statement.rs  mod.rs  unsafe_block.rs
src/rust/enums/: enum_case.rs  enum_fields.rs  enumeration.rs  mod.rs
src/rust/exp/: field_exp.rs  set_field_exp.rs
src/rust/function/: call.rs  function.rs  mod.rs  receiver.rs  signature.rs  with_fn_generics.rs  with_function_generics.rs  with_functions.rs  with_receiver.rs  with_result.rs  with_signature_decs.rs
src/rust/loops/: mod.rs  while_let.rs
src/rust/mods/: mod.rs  mod_path.rs  validate_mod_name.rs
src/rust/source/: source.rs
src/rust/structs/: impl_block.rs  mod.rs  struct_field.rs  structure.rs  with_derives.rs
src/rust/structure/: impl_block.rs  mod.rs  struct_field.rs  (+1 more)
src/statement/: empty_line.rs  expression_statement.rs  mod.rs  semi.rs  statement.rs  with_statements.rs
(+45 files in other folders)
